package main.java.model.documento;

import java.time.LocalDateTime;

public class Informe {
    public int idInforme;
    public LocalDateTime fechaEmision;
    public String nombreReciclador;
}